tests/Rules/Media/Fixtures/invalid/img_empty_alt.html.twig
{# 1 error #}
<img src="photo.jpg" alt="">
